demo-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: nginx:latest
        volumeMounts:
        - mountPath: "/app/data"
          name: my-persistent-storage
      volumes:
      - name: my-persistent-storage
        persistentVolumeClaim:
          claimName: my-pvc # Reference to the PVC name created earlier
