managed-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: learning-ingress-ipaddress
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: "gce"
  defaultBackend:
    service:
      name: mc-service
      port:
        number: 80
  rules:
    - host: quochuynguyen.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    # - host: argocd.quochuynguyen.tech
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: argocd-server
    #             port:
    #               number: 80
    # - host: grafana.quochuynguyen.tech
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kube-prometheus-stack-grafana
    #             port:
    #               number: 80
